--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "duckdb>=1.4.3",
     "polars>=1.37.1",
     "pydeck>=0.9.1",
+    "requests>=2.32.5",
     "streamlit>=1.53.0",
 ]
 
